# cdss-agentic-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CDSS Architecture.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: api-reference.md  architecture.md
frontend/: .env.example  DEPLOYMENT_AUDIT.md  PRODUCTION_VALIDATION.md  index.html  package-lock.json  package.json  playwright.config.ts  redesign-plan.md  staticwebapp.config.json  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/docs/: accessibility-performance-checklist.md  clinical-design-system.md  redesign-ui-qa-checklist.md
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/config/: runtime.ts
frontend/src/hooks/: useAgentOutputs.ts  useClinicalQuery.ts  useConfidenceLevel.ts  usePatientData.ts  useStreamingQuery.ts  useStreamingSession.ts
frontend/src/lib/: auth.ts  (+2 more)
infra/bicep/: main.bicep  main.json  parameters.dev.json  parameters.prod.json  parameters.staging.json
infra/scripts/: bootstrap-deploy.sh  configure-pubmed-prod.sh  create-search-indexes.sh  deploy.sh  ensure-cosmos-embedding-cache-policy.sh  ensure-openai-runtime-access.sh  fix-auth-config.sh  pin-containerapp-latest-ready.sh  populate-env.sh  seed-data-infra-network.sh  seed-data.sh  seed_data.py  setup-entra-spa-auth.sh
sample_data/: sample_lab_report.txt  sample_literature_upload.txt  sample_patient.json  sample_patients.json  sample_protocol.md  sample_protocol_upload.txt  sample_query.json  sample_response.json
src/cdss/: __init__.py
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_agents.py  test_api.py  test_chunker.py  test_clients.py  test_ingestion.py  test_models.py  test_orchestrator.py  test_query_service.py  test_rag_pipeline.py
(+104 files in other folders)
